# Literature-Review-Agent

./: .gitignore  HANDOVER.md  README.md  SIMPLE_GUIDE.md  project history.md  pyproject.toml  tone.yml  workflow_change_log.yml
agents/: README.md
configs/: approved_sources.yml  decision_rules.yml  equipment.yml
examples/: demo_papers.yml
projects/smoke_test/input/: user_input.txt
projects/smoke_test/state/: intake.yml  workflow_state.yml
projects/user_input_template/outputs/: final_brief.md  recommendations.txt  route_comparison.txt  search_results.txt  shortlist_review.txt
projects/user_input_template/state/: intake.yml  lab_analogue.yml  papers.yml  route_comparison.yml  shortlist.yml  technical_scope.yml  workflow_state.yml
projects/user_input_template/state/paper_details/: PAPER-001.yml  PAPER-002.yml
specs/: agent_contracts.md  design_process.md  design_rationale.md  workflow_spec.md
src/literature_review_agent/: __init__.py  agents.py  cli.py  extraction.py  orchestrator.py  presentation.py  project.py  search_sources.py  yaml_store.py
state/: intake.yml  workflow_state.yml
templates/: final_brief_template.md  user_input_template.txt
tests/: test_workflow.py
