[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-review-agent"
version = "0.1.0"
description = "YAML-driven multi-agent workflow scaffold for experiment planning briefs."
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
lra = "literature_review_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
